--- a/styles.css
+++ b/styles.css
@@ -164,3 +164,55 @@
     font-weight: 400;
     line-height: 170%; /* 30.6px */
 }
+.products{
+    display: flex;
+    flex-direction: row;
+    padding: 90px 125px;
+    gap:30px;
+}
+.products__item{
+    display: flex;
+    flex-direction: column;
+    width: 255px;
+    height: 465px;
+}
+.products__item__image{
+    width: 255px;
+    height: 180px;
+    padding-bottom: 20px;
+}
+.products__item strong{
+    color: #666;
+    font-family: Roboto;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding-bottom: 8px;
+}
+.products__item__count{
+    color: #B5B5BD;
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding-bottom: 8px;
+}
+.products__item__description{
+    color: #85859B;
+    font-family: Roboto;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 170%; /* 30.6px */
+    padding-bottom: 20px;
+}
+.products__item a{
+    color: #7875FE;
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
