--- a/styles.css
+++ b/styles.css
@@ -167,7 +167,7 @@
 .products{
     display: flex;
     flex-direction: row;
-    padding: 90px 125px;
+    padding: 90px 165px;
     gap:30px;
 }
 .products__item{
@@ -215,4 +215,21 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+.brands{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between ;
+    gap:30px;
+    padding: 90px 165px;
+    background: #EBEBEB;
+}
+.brands__item{
+display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #C4C4C4;
+}
+.brands__item img{
+    margin: 57px 15px;
 }
