--- a/styles.css
+++ b/styles.css
@@ -233,3 +233,28 @@ display: flex;
 .brands__item img{
     margin: 57px 15px;
 }
+.sale{
+    display: flex;
+    flex-direction: row;
+    padding: 0 165px;
+    padding-top: 90px;
+    gap:30px;
+}
+.sale__description h2{
+    color: #666;
+    font-family: Roboto;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%; /* 40px */
+    padding-bottom: 8px;
+}
+.sale__description p{
+    color: #85859B;
+    font-family: Roboto;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 170%; /* 30.6px */
+    padding-bottom: 30px;
+}
